Changes By Dharmesh

--- a/AMDIAM/Views/Home/Index.cshtml
+++ b/AMDIAM/Views/Home/Index.cshtml
@@ -92,7 +92,7 @@
 
                 <div class="dropdown inline-block relative z-[111]">
                     <button class="font-semibold py-2 rounded inline-flex items-center">
-                        <a href="service.html">
+                        <a href="~/Services/Index">
                             <span class="mr-1 hover:text-[#B76E79] cursor-pointer font-semibold block">Services</span>
                         </a>
                         <svg class="fill-current h-4 w-4"
@@ -363,7 +363,7 @@
                             </p>
 
                             <div class="flex gap-5">
-                                <a href="service.html" class="button2  px-5 py-1 text-lg border border-white">
+                                <a href="~/Services/Index" class="button2  px-5 py-1 text-lg border border-white">
                                     Browse Collection
                                 </a>
                             </div>
