--- a/AMDIAM/Views/Home/Index.cshtml
+++ b/AMDIAM/Views/Home/Index.cshtml
@@ -79,12 +79,12 @@
         <nav class="z-10 lg:relative md:relative absolute top-20 md:top-3 py-7 lg:py-0 lg:top-0 bg-white lg:bg-[#020014] lg:flex hidden w-full justify-between items-center xl:px-40 lg:px-28 !selection:select-none"
              id="menu">
             <div class="flex flex-col lg:flex-row gap-5 lg:gap-14 items-center lg:text-white">
-                <a href="index.html">
+                <a href="~/home/Index">
                     <p class="lg:text-[#B76E79] hover:text-[#B76E79] text-black font-semibold cursor-pointer block">
                         Home
                     </p>
                 </a>
-                <a href="about.html">
+                <a href="~/home/about">
                     <p class="hover:text-[#B76E79] cursor-pointer font-semibold block">
                         About
                     </p>
@@ -684,7 +684,7 @@
                         <input type="text"
                                class="h-[50px] rounded-md px-3"
                                placeholder="Your E-mail" />
-                        <a href="index.html">
+                        <a href="~/home/Index">
                             <button class="h-[50px] px-5 my-2 rounded-md border hover:border-2 border-[#B76E79]">
                                 Subscribe
                             </button>
@@ -793,7 +793,7 @@
                         <i class="fa-brands fa-facebook text-xl"></i>
                         <p class="">Facebook</p>
                     </a>
-                    <a href="index.html"
+                    <a href="~/home/Index"
                        class="flex gap-3 text-white hover:text-[#B76E79]">
                         <i class="fa-brands fa-pinterest text-xl"></i>
                         <p class="">Pinterest</p>
