Changes By Dharmesh

--- a/AMDIAM/Views/Home/Index.cshtml
+++ b/AMDIAM/Views/Home/Index.cshtml
@@ -79,7 +79,7 @@
         <nav class="z-10 lg:relative md:relative absolute top-20 md:top-3 py-7 lg:py-0 lg:top-0 bg-white lg:bg-[#020014] lg:flex hidden w-full justify-between items-center xl:px-40 lg:px-28 !selection:select-none"
              id="menu">
             <div class="flex flex-col lg:flex-row gap-5 lg:gap-14 items-center lg:text-white">
-                <a href="~/home/Index">
+                <a href="~/Home/Index">
                     <p class="lg:text-[#B76E79] hover:text-[#B76E79] text-black font-semibold cursor-pointer block">
                         Home
                     </p>
