--- a/AMDIAM/Views/Home/Index.cshtml
+++ b/AMDIAM/Views/Home/Index.cshtml
@@ -167,7 +167,7 @@
                         style="width: max-content">
                         <li class="">
                             <a class="rounded-t-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="education1.html">DIAMOND 4C'S</a>
+                               href="~/Education/Education1">DIAMOND 4C'S</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
@@ -269,7 +269,7 @@
                                 <a href="contact.html" class="button2  px-5 py-1 border border-white">
                                     Contact
                                 </a>
-                                <a href="education1.html" class="flex gap-3  items-center">
+                                <a href="~/Education/Education1" class="flex gap-3  items-center">
                                     <p class="text-[#C6C6C6]">Gallery</p>
                                     <i class="fas text-white fa-solid fa-arrow-right"></i>
                                 </a>
@@ -768,7 +768,7 @@
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="education1.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">4C OF DIAMOND</p></a>
+                        <a href="~/Education/Education1"><p class="text-[#E9E9E9] hover:text-[#B76E79]">4C OF DIAMOND</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
