Changes by Vishal

--- a/AMDIAM/Views/Home/Index.cshtml
+++ b/AMDIAM/Views/Home/Index.cshtml
@@ -171,23 +171,23 @@
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="education2.html">HISTORY OF THE DIAMOND</a>
+                               href="~/Education/education2">HISTORY OF THE DIAMOND</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="education3.html">HOW DIAMONDS ARE FORMED</a>
+                               href="~/Education/education3">HOW DIAMONDS ARE FORMED</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="education4.html">DIAMOND CERTIFICATION</a>
+                               href="~/Education/education4">DIAMOND CERTIFICATION</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="education5.html">FANCY COLOR DIAMONDS</a>
+                               href="~/Education/education5">FANCY COLOR DIAMONDS</a>
                         </li>
                         <li class="">
                             <a class="rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="education6.html">CONFLICT-FREE DIAMONDS</a>
+                               href="~/Education/education6">CONFLICT-FREE DIAMONDS</a>
                         </li>
                     </ul>
                 </div>
@@ -772,7 +772,7 @@
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="about.html"> <p class="text-[#E9E9E9] hover:text-[#B76E79]">ABOUT US</p></a>
+                        <a href="~/home/about"> <p class="text-[#E9E9E9] hover:text-[#B76E79]">ABOUT US</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
