--- a/AMDIAM/Views/Education/Education3.cshtml
+++ b/AMDIAM/Views/Education/Education3.cshtml
@@ -24,12 +24,22 @@
 
     <!-- css style  -->
     <link rel="stylesheet" href="~/css/style.css" />
+
+    <style>
+        /* CSS for active item */
+        .active-item {
+            background: linear-gradient( 90deg, #ca6b9d 0%, rgba(4, 2, 20, 0.38) 100% );
+            width: 135px;
+            height: 4px;
+            flex-shrink: 0;
+        }
+    </style>
 </head>
-<body class="">
+<body>
     <div class="bg-[#020014] ">
         <!-- navbar  -->
-        <!-- navbar  -->
-        <div class="flex lg:hidden sticky top-0 z-[111] bg-[#020014] items-center justify-between py-5 px-4">
+
+        <div class="flex lg:hidden sticky top-0 z-[11] bg-[#020014] items-center justify-between py-5 px-4">
             <p class="text-white lg:hidden">AHMD</p>
             <div class="bg-white lg:hidden flex text-black rounded-lg p-2" id="menu-button">
                 <svg xmlns="http://www.w3.org/2000/svg"
@@ -48,8 +58,8 @@
         <nav class="z-10 lg:relative md:relative absolute top-20 md:top-3 py-7 lg:py-0 lg:top-0 bg-white lg:bg-[#020014] lg:flex hidden w-full justify-between items-center xl:px-40 lg:px-28 !selection:select-none"
              id="menu">
             <div class="flex flex-col lg:flex-row gap-5 lg:gap-14 items-center lg:text-white">
-                <a href="~/home/Index"> <p class=" hover:text-[#B76E79] font-semibold cursor-pointer block">Home</p></a>
-                <a href="~/home/about"><p class="lg:text-[#B76E79] cursor-pointer font-semibold block">About</p></a>
+                <a href="~/Home/Index"> <p class=" hover:text-[#B76E79] font-semibold cursor-pointer block">Home</p></a>
+                <a href="~/home/about"><p class="hover:text-[#B76E79] cursor-pointer font-semibold block">About</p></a>
 
 
                 <div class="dropdown inline-block relative z-[111]">
@@ -78,13 +88,13 @@
 
 
             <div class="lg:flex flex-col lg:flex-row gap-5 lg:gap-14 hidden">
-                <img src="~/img/logo.png" alt="" class="h-[100px] py-2" />
+                <img src="~/img/logo.png" alt="" class="h-[100px]  py-2" />
             </div>
 
             <div class="flex flex-col lg:flex-row gap-5 lg:gap-14 items-center lg:text-white mt-5 lg:m-0">
                 <div class="dropdown inline-block  relative z-[11]">
                     <button class="font-semibold py-2  rounded inline-flex items-center">
-                        <a href=""><span class="mr-1 hover:text-[#B76E79] cursor-pointer font-semibold block">Education</span></a>
+                        <a href=""><span class="mr-1 lg:text-[#B76E79] cursor-pointer font-semibold block">Education</span></a>
                         <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /> </svg>
                     </button>
                     <ul class="dropdown-menu absolute hidden text-gray-700 pt-1 " style="width: max-content;">
@@ -115,170 +125,121 @@
                 </div>
 
                 <!-- <p class="hover:text-[#B76E79] cursor-pointer block font-semibold">Contact</p> -->
-
                 <a href="login.html"><span class="mr-1 hover:text-[#B76E79] cursor-pointer font-semibold block">Login</span></a>
             </div>
         </nav>
 
         <!-- HERO containt  -->
 
-        <div class="">
-            <img src="~/img/aboutus.png" alt="" class="w-full h-[630px] object-cover" />
+        <div class="relative w-full ">
+            <img src="~/img/light.png" alt="" class="w-screen max-h-[80px]" />
+            <div class="absolute top-0 left-0 right-0 bottom-0 flex items-center md:px-28 px-5 justify-between">
+                <p class="text-white text-center">HOW DIAMONDS ARE FORMED</p>
+                <p class="md:text-base text-sm text-[#A8A5A5]">
+                    Home /
+                    <span class="text-white md:text-lg text-sm">HOW DIAMONDS ARE FORMED</span>
+                </p>
+            </div>
         </div>
 
-        <!-- main containt  -->
-
-        <div class="flex flex-col justify-center items-center py-7 md:px-20 px-10">
-            <!-- service cards  -->
-            <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-20 py-10 text-white">
-                <div class="card p-5 flex flex-col items-center h-[320px] w-[275px]">
-                    <img src="~/img/activityicon.png"
-                         alt=""
-                         class="h-[70px] w-[70px]" />
-                    <p class="py-5 text-lg uppercase">Our Activity</p>
-                    <p class="text-[#C6C6C6] text-center">
-                        Wholesalers, manufacturers and expert colored gemstone specialists
-                    </p>
-                </div>
-                <div class="card p-5 flex flex-col items-center h-[320px] w-[275px]">
-                    <img src="~/img/productsicon.png"
-                         alt=""
-                         class="h-[70px] w-[70px]" />
-                    <p class="py-5 text-lg uppercase">Our Products</p>
-                    <p class="text-[#C6C6C6] text-center">
-                        Rough diamonds, cut diamonds, coloured gemstones (rubies,
-                        sapphires, emeralds), custom-made jewellery
-                    </p>
-                </div>
-                <div class="card p-5 flex flex-col items-center h-[320px] w-[275px]">
-                    <img src="~/img/serviceicon.png"
-                         alt=""
-                         class="h-[70px] w-[70px]" />
-                    <p class="py-5 text-lg uppercase">Our Services</p>
-                    <p class="text-[#C6C6C6] text-center">
-                        Specialized in cutting and polishing rough diamonds as well as in
-                        manufacturing high-end finished jewelry.
-                    </p>
-                </div>
+        <div class="md:px-28 px-10 my-10 grid lg:grid-cols-3 grid-cols-1 gap-x-10  text-white  ">
+            <div class="">
+                <img src="~/img/education03.png" alt="">
             </div>
+            <div class="flex flex-col gap-y-7 col-span-2">
+                <p class="text-3xl font-semibold">HIGH PRESSURE, HIGH TEMPERATURE</p>
 
-            <!-- about section  -->
-            <div class="grid lg:grid-cols-2 grid-cols-1 gap-20  mt-20 lg:px-20 px-10">
-                <div class="">
-                    <p class="text-[#E4E2E2] text-xl text-justify
-             font-extralight">
-                        Our team at AM DIAM is made up of international diamond and colored gemstone specialists. We are specialized in cutting and polishing rough diamonds as well as in manufacturing high-end
-                        finished jewellery.
-                    </p>
-                </div>
-                <div class="flex gap-x-20">
-                    <div class="flex flex-col gap-y-4 ">
-                        <p class="text-lg text-white">WE MANUFACTURE IN:</p>
-
-                        <div class="flex text-white text-sm items-center gap-3">
-                            <img src="~/img/bel.png"
-                                 alt=""
-                                 class="h-[20px] w-[20px]" />
-                            <p class="font-semibold">BELGIUM</p>
-                        </div>
-                        <div class="flex text-white text-sm items-center gap-3">
-                            <img src="~/img/hong.png"
-                                 alt=""
-                                 class="h-[20px] w-[20px]" />
-                            <p class="font-semibold">HONG KONG</p>
-                        </div>
-                        <div class="flex text-white text-sm items-center gap-3">
-                            <img src="~/img/india.png"
-                                 alt=""
-                                 class="h-[18px] w-[20px]" />
-                            <p class="font-semibold">INDIA</p>
-                        </div>
-                        <div class="flex text-white text-sm items-center gap-3">
-                            <img src="~/img/uae.png"
-                                 alt=""
-                                 class="h-[18px] w-[20px]" />
-                            <p class="font-semibold">U.A.E</p>
-                        </div>
-                        <div class="flex text-white text-sm items-center gap-3">
-                            <img src="~/img/usa.png"
-                                 alt=""
-                                 class="h-[18px] w-[20px]" />
-                            <p class="font-semibold">U.S.A</p>
-                        </div>
-                    </div>
-                    <div class="flex flex-col gap-y-4 ">
-                        <p class="text-lg text-white">WHAT WE OFFER:</p>
-                        <div class="flex text-white text-sm items-center gap-3">
-                            <img src="~/img/dimondround.png"
-                                 alt=""
-                                 class="h-[18px] w-[18px]" />
-                            <p class="">High-end finished jewelry.</p>
-                        </div>
-                        <div class="flex text-white text-sm items-center gap-3">
-                            <img src="~/img/dimondround.png"
-                                 alt=""
-                                 class="h-[18px] w-[18px]" />
-                            <p class="">Cutting and polishing diamonds.</p>
-                        </div>
-                        <div class="flex text-white text-sm items-center gap-3">
-                            <img src="~/img/dimondround.png"
-                                 alt=""
-                                 class="h-[18px] w-[18px]" />
-                            <p class="">Polishing colour stones.</p>
-                        </div>
-                    </div>
-                </div>
+                <p class="text-base font-normal">
+                    The diamonds that are formed under the earth’s surface are known as natural diamonds. They are carbon-bearing materials (with a chemical makeup that is similar to coal) that form when exposed to the perfect combination of high pressure and high temperature conditions, occurring between depths of 140 and 180 km beneath the surface of earth, in earth’s lithospheric mantle, or at the site of a meteorite strike. After a period of 1 to 3 billion years, until the diamond is formed, it travels to the earth’s surface by deep-origin volcanic eruptions via streams of molten rock that go through earth’s volcanic pipes.
+                </p>
+                <p class="text-base font-normal">
+                    As it travels, it acquires inclusions and flaws, giving each diamond its own unique fingerprint. No two natural diamonds are alike—each one displays a unique colour or clarity, and is a wonder of the world. Many diamonds can be found in alluvial deposits, along shorelines and in rare cases in glacial deposits. Essentially, a diamond is a compressed form of carbon that come to life only when the most unique set of criteria are met. This is a natural phenomenon, and attribute the diamond’s rarity and value in the world.
+                </p>
             </div>
-
-
-            <div class="relative w-screen   my-10  ">
-                <img src="~/img/navdownlight.jpg" alt="" class="lighttext w-screen">
-                <div class="absolute top-0 left-0 right-0 bottom-0 flex items-center justify-center  md:px-0 px-0">
-                    <p class="text-white text-center px-10 md:w-1/3 font-semibold md:text-xl text-sm ">You are welcome to visit us at our Dubai office, where we will present you with a wide range of diamonds and other precious stones specially selected for your budget.</p>
-                </div>
-            </div>
+        </div>
 
 
 
-            <div class="grid lg:grid-cols-2 grid-cols-1 gap-20 mb-10">
-                <div class="">
-                    <img src="~/img/about2.png" alt="">
-                </div>
-                <div class="">
-                    <img src="~/img/about1.png" alt="">
-                </div>
+        <div class="md:px-28 px-10 my-10">
+            <div class=" text-white">
 
-            </div>
 
-            <!-- news later  -->
-            <div class="px-20 w-full">
-                <div class="newslater lg:h-[120px] w-full items-center  gap-5 justify-between p-5 flex md:px-10  my-10">
-                    <p class="text-2xl font-bold">
-                        Subscribe to Our
-                        Newsletter
-                    </p>
-                    <div class="flex flex-col items-center  ">
-                        <div class="lg:flex items-center gap-3">
-                            <input type="text"
-                                   class="h-[50px] rounded-md px-3"
-                                   placeholder="Your E-mail" />
-                            <a href="~/home/Index">
-                                <button class="h-[50px] px-5 my-2 rounded-md border hover:border-2 border-[#B76E79]">
-                                    Subscribe
-                                </button>
-                            </a>
-                        </div>
-                        <p class="text-sm text-[#E9E9E9]">
-                            Discover the latest collections, news and exclusive launches.
-                        </p>
+
+
+                <div class="flex flex-col gap-y-5 py-7">
+                    <p class="text-3xl font-semibold">DIAMOND HISTORICAL FACTS</p>
+
+                    <div class="px-5 flex flex-col gap-y-5">
+                        <li class="text-base font-normal">
+                            The name diamond is derived from the Greek word “adamas” which
+                            means unconquerable, in reference to the gem’s <br>extreme harness
+                            and durability.
+                        </li>
+                        <li class="text-base font-normal">
+                            Diamonds are the hardest material on earth, 58 times harder than anything else.
+                        </li>
+                        <li class="text-base font-normal">
+                            A star, fifty light years from earth, is a 10 billion-trillion-trillion carat diamond – the “Lucy” in the sky.
+                        </li>
+                        <li class="text-base font-normal">
+                            The first diamond engagement ring was presented in 1477, when the Archduke Maximilian of Austria proposed to Mary of <br> Burgundy.
+                        </li>
+                        <li class="text-base font-normal">
+                            The mining conglomerate, De Beers, joined hands with a powerful advertising agency and together coined the phrase “a diamond is forever” – the premise of which was that only a diamond should be the choice for an engagement ring.
+                        </li>
+                        <li class="text-base font-normal">
+                            A diamond is 1 in 1,00,000 literally, with its average yield in most mines being 1 part diamond to 1 million parts rock.
+                        </li>
+
                     </div>
                 </div>
 
+
+
+
+
+            </div>
+        </div>
+
+        <div class="relative  my-10">
+            <img src="~/img/navdownlight.jpg" alt="" class="w-screen">
+            <div class="absolute top-0 left-0 right-0 bottom-0 flex flex-col gap-y-5 items-center justify-center ">
+                <p class="text-2xl text-white font-semibold lg:mt-10 mt-10">EXPERT ADVICE</p>
+                <p class="text-white text-center font-light md:text-base text-xs md:px-28 px-5">Keeping in mind that buying and selling diamonds is complex process, we understand that qualified experience is essential. You may or may not have the accurate information or knowledge of making an informed decision, and getting the best value for your diamonds. At AM DIAM DMCC, you can be assured of receiving the best value for your diamonds thanks to our experience in valuing and buying diamonds.  We have gained the expertise and knowledge needed to offer you the highest prices for your diamonds. You can book an appointment, free and benefit from our trustworthy experts on your every transaction.</p>
             </div>
 
 
+        </div>
 
+        <div class="flex justify-center text-white py-5">
+            <a href="contact.html" class=" button2 py-1 px-5 text-base border border-white">
+                Contact Us
+            </a>
+        </div>
 
+        <!-- news later  -->
+        <div class="md:px-28 px-10 w-full">
+            <div class="newslater lg:h-[120px] w-full items-center  gap-5 justify-between p-5 flex md:px-10   my-16">
+                <p class="text-2xl font-bold">
+                    Subscribe to Our
+                    Newsletter
+                </p>
+                <div class="flex flex-col items-center  ">
+                    <div class="lg:flex items-center gap-3">
+                        <input type="text"
+                               class="h-[50px] rounded-md px-3"
+                               placeholder="Your E-mail" />
+                        <a href="~/Home/Index">
+                            <button class="h-[50px] px-5 my-2 rounded-md border hover:border-2 border-[#B76E79]">
+                                Subscribe
+                            </button>
+                        </a>
+                    </div>
+                    <p class="text-sm text-[#E9E9E9]">
+                        Discover the latest collections, news and exclusive launches.
+                    </p>
+                </div>
+            </div>
 
         </div>
 
@@ -378,7 +339,7 @@
                         <i class="fa-brands fa-facebook text-xl"></i>
                         <p class="">Facebook</p>
                     </a>
-                    <a href="~/home/Index"
+                    <a href="~/Home/Index"
                        class="flex gap-3 text-white hover:text-[#B76E79]">
                         <i class="fa-brands fa-pinterest text-xl"></i>
                         <p class="">Pinterest</p>
@@ -399,35 +360,34 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="py-3 bg-[#24101B] px-20">
-            <p class="text-white font-medium">
-                AM Diam | Copyrights © 2023 All Rights Reserved
-            </p>
-        </div>
+    <div class="py-3 bg-[#24101B] px-20">
+        <p class="text-white font-medium">
+            AM Diam | Copyrights © 2023 All Rights Reserved
+        </p>
+    </div>
 
-
-
-
-        <!-- navbar javascript  -->
-        <script>
+    <!-- navbar javascript  -->
+    <script>
       const button = document.querySelector("#menu-button");
       const menu = document.querySelector("#menu");
 
       button.addEventListener("click", () => {
         menu.classList.toggle("hidden");
       });
-        </script>
+    </script>
 
-        <!-- Tailwindcss Config -->
-        <script>
+    <!-- Tailwindcss Config -->
+    <script>
       tailwind.config = {
         theme: {
           theme: {
             extends: {
+
               fontFamily: {
-                poppins: ["Poppins"],
-              },
+           'poppins': ['Poppins'],
+        },
               screens: {
                 @*sm: "640px",
                 // => @media (min-width: 640px) { ... }
@@ -448,9 +408,9 @@
           },
         },
       };
-        </script>
+    </script>
 
-        <!-- JS File -->
-        <script src="~/js/main.js"></script>
+    <!-- JS File -->
+    <script src="~/js/main.js"></script>
 </body>
 </html>
