--- a/AMDIAM/Views/Services/Index.cshtml
+++ b/AMDIAM/Views/Services/Index.cshtml
@@ -60,7 +60,7 @@
              id="menu">
             <div class="flex flex-col lg:flex-row gap-5 lg:gap-14 items-center lg:text-white">
                 <a href="~/Home/Index"> <p class=" hover:text-[#B76E79] font-semibold cursor-pointer block">Home</p></a>
-                <a href="about.html"><p class="hover:text-[#B76E79] cursor-pointer font-semibold block">About</p></a>
+                <a href="~/home/about"><p class="hover:text-[#B76E79] cursor-pointer font-semibold block">About</p></a>
 
 
                 <div class="dropdown inline-block relative z-[111]">
@@ -99,12 +99,12 @@
                         <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /> </svg>
                     </button>
                     <ul class="dropdown-menu absolute hidden text-gray-700 pt-1 " style="width: max-content;">
-                        <li class=""><a class="rounded-t-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education1.html">DIAMOND 4C'S</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education2.html">HISTORY OF THE DIAMOND</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education3.html">HOW DIAMONDS ARE FORMED</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education4.html">DIAMOND CERTIFICATION</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education5.html">FANCY COLOR DIAMONDS</a></li>
-                        <li class=""><a class=" rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education6.html">CONFLICT-FREE DIAMONDS</a></li>
+                        <li class=""><a class="rounded-t-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education1">DIAMOND 4C'S</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education2">HISTORY OF THE DIAMOND</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education3">HOW DIAMONDS ARE FORMED</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education4">DIAMOND CERTIFICATION</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education5">FANCY COLOR DIAMONDS</a></li>
+                        <li class=""><a class=" rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education6">CONFLICT-FREE DIAMONDS</a></li>
 
                     </ul>
                 </div>
@@ -517,11 +517,11 @@
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="education1.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">4C OF DIAMOND</p></a>
+                        <a href="~/Education/Education1"><p class="text-[#E9E9E9] hover:text-[#B76E79]">4C OF DIAMOND</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="about.html"> <p class="text-[#E9E9E9] hover:text-[#B76E79]">ABOUT US</p></a>
+                        <a href="~/home/about"> <p class="text-[#E9E9E9] hover:text-[#B76E79]">ABOUT US</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
