Changes By Dharmesh

--- a/AMDIAM/Views/Education1.cshtml
+++ b/AMDIAM/Views/Education1.cshtml
@@ -64,20 +64,20 @@
 
                 <div class="dropdown inline-block relative z-[111]">
                     <button class="font-semibold py-2  rounded inline-flex items-center">
-                        <a href="service"><span class="mr-1 hover:text-[#B76E79] cursor-pointer font-semibold block">Services</span></a>
+                        <a href="service.html"><span class="mr-1 hover:text-[#B76E79] cursor-pointer font-semibold block">Services</span></a>
                         <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /> </svg>
                     </button>
                     <ul class="dropdown-menu absolute hidden text-gray-700 pt-1 " style="width: max-content;">
-                        <li class=""><a class="rounded-t bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service1">DIAMOND SELLING SERVICE</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="Services/service2">DIAMOND SOURCING SERVICE</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="Services/service5">DM (DIAMOND MANUFACTURING)</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="Services/service6">AM DIAM FINANCE</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="Services/service7">FREE APPRAISAL AND SHIPPING</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="Services/service8">SECURITY SEALS</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="Services/service9">INVESTMENT DIAMONDS</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="Services/service10">FLEXIBLE PAYMENT OPTIONS</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="Services/service4">PARTNERS</a></li>
-                        <li class=""><a class="rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="Services/service3">CUSTOM WEB SOLUTIONS</a></li>
+                        <li class=""><a class="rounded-t bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service1.html">DIAMOND SELLING SERVICE</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service2.html">DIAMOND SOURCING SERVICE</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service5.html">DM (DIAMOND MANUFACTURING)</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service6.html">AM DIAM FINANCE</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service7.html">FREE APPRAISAL AND SHIPPING</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service8.html">SECURITY SEALS</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service9.html">INVESTMENT DIAMONDS</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service10.html">FLEXIBLE PAYMENT OPTIONS</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service4.html">PARTNERS</a></li>
+                        <li class=""><a class="rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service3.html">CUSTOM WEB SOLUTIONS</a></li>
                     </ul>
                 </div>
             </div>
@@ -99,11 +99,11 @@
                     </button>
                     <ul class="dropdown-menu absolute hidden text-gray-700 pt-1 " style="width: max-content;">
                         <li class=""><a class="rounded-t-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education1">DIAMOND 4C'S</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education2">HISTORY OF THE DIAMOND</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education3">HOW DIAMONDS ARE FORMED</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education4">DIAMOND CERTIFICATION</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education5">FANCY COLOR DIAMONDS</a></li>
-                        <li class=""><a class=" rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education6">CONFLICT-FREE DIAMONDS</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education2.html">HISTORY OF THE DIAMOND</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education3.html">HOW DIAMONDS ARE FORMED</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education4.html">DIAMOND CERTIFICATION</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education5.html">FANCY COLOR DIAMONDS</a></li>
+                        <li class=""><a class=" rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education6.html">CONFLICT-FREE DIAMONDS</a></li>
 
                     </ul>
                 </div>
@@ -115,17 +115,17 @@
                         <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /> </svg>
                     </button>
                     <ul class="dropdown-menu absolute hidden text-gray-700 pt-1 " style="width: max-content;">
-                        <li class=""><a class="rounded-t-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="contact">CONTACT US</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="career">CAREER</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="signup">CREATE AN ACCOUNT</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="login">LOGIN</a></li>
-                        <li class=""><a class="rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="passwordreset">FORGOT PASSWORD</a></li>
+                        <li class=""><a class="rounded-t-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="contact.html">CONTACT US</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="career.html">CAREER</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="signup.html">CREATE AN ACCOUNT</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="login.html">LOGIN</a></li>
+                        <li class=""><a class="rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="passwordreset.html">FORGOT PASSWORD</a></li>
 
                     </ul>
                 </div>
 
                 <!-- <p class="hover:text-[#B76E79] cursor-pointer block font-semibold">Contact</p> -->
-                <a href="login"><span class="mr-1 hover:text-[#B76E79] cursor-pointer font-semibold block">Login</span></a>
+                <a href="login.html"><span class="mr-1 hover:text-[#B76E79] cursor-pointer font-semibold block">Login</span></a>
             </div>
         </nav>
 
@@ -399,31 +399,31 @@
                 <div class="flex flex-col gap-y-4">
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="service"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND BUYING</p></a>
+                        <a href="service.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND BUYING</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="Services/service2">
+                        <a href="service2.html">
                             <p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND SOURCING</p>
                         </a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="service1"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND SELLING</p></a>
+                        <a href="service1.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND SELLING</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="Services/service5">
+                        <a href="service5.html">
                             <p class="text-[#E9E9E9] hover:text-[#B76E79]">MANUFACTURING</p>
                         </a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="Services/service9"><p class="text-[#E9E9E9] hover:text-[#B76E79]">INVESTMENT DIAMOND</p></a>
+                        <a href="service9.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">INVESTMENT DIAMOND</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="education1"><p class="text-[#E9E9E9] hover:text-[#B76E79]">4C OF DIAMOND</p></a>
+                        <a href="education1.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">4C OF DIAMOND</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
@@ -431,11 +431,11 @@
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="career"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CAREER</p></a>
+                        <a href="career.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CAREER</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="contact"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CONTACT</p></a>
+                        <a href="contact.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CONTACT</p></a>
                     </div>
                 </div>
             </div>
