--- a/AMDIAM/Views/Home/Index.cshtml
+++ b/AMDIAM/Views/Home/Index.cshtml
@@ -105,43 +105,43 @@
                         style="width: max-content">
                         <li class="">
                             <a class="rounded-t bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="service1.html">DIAMOND SELLING SERVICE</a>
+                               href="service1">DIAMOND SELLING SERVICE</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="service2.html">DIAMOND SOURCING SERVICE</a>
+                               href="Services/service2">DIAMOND SOURCING SERVICE</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="service5.html">DM (DIAMOND MANUFACTURING)</a>
+                               href="Services/service5">DM (DIAMOND MANUFACTURING)</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="service6.html">AM DIAM FINANCE</a>
+                               href="Services/service6">AM DIAM FINANCE</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="service7.html">FREE APPRAISAL AND SHIPPING</a>
+                               href="Services/service7">FREE APPRAISAL AND SHIPPING</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="service8.html">SECURITY SEALS</a>
+                               href="Services/service8">SECURITY SEALS</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="service9.html">INVESTMENT DIAMONDS</a>
+                               href="Services/service9">INVESTMENT DIAMONDS</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="service10.html">FLEXIBLE PAYMENT OPTIONS</a>
+                               href="Services/service10">FLEXIBLE PAYMENT OPTIONS</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="service4.html">PARTNERS</a>
+                               href="Services/service4">PARTNERS</a>
                         </li>
                         <li class="">
                             <a class="rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="service3.html">CUSTOM WEB SOLUTIONS</a>
+                               href="Services/service3">CUSTOM WEB SOLUTIONS</a>
                         </li>
                     </ul>
                 </div>
@@ -171,23 +171,23 @@
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="education2.html">HISTORY OF THE DIAMOND</a>
+                               href="education2">HISTORY OF THE DIAMOND</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="education3.html">HOW DIAMONDS ARE FORMED</a>
+                               href="education3">HOW DIAMONDS ARE FORMED</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="education4.html">DIAMOND CERTIFICATION</a>
+                               href="education4">DIAMOND CERTIFICATION</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="education5.html">FANCY COLOR DIAMONDS</a>
+                               href="education5">FANCY COLOR DIAMONDS</a>
                         </li>
                         <li class="">
                             <a class="rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="education6.html">CONFLICT-FREE DIAMONDS</a>
+                               href="education6">CONFLICT-FREE DIAMONDS</a>
                         </li>
                     </ul>
                 </div>
@@ -207,29 +207,29 @@
                         style="width: max-content">
                         <li class="">
                             <a class="rounded-t-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="contact.html">CONTACT US</a>
+                               href="contact">CONTACT US</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="career.html">CAREER</a>
+                               href="career">CAREER</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="signup.html">CREATE AN ACCOUNT</a>
+                               href="signup">CREATE AN ACCOUNT</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="login.html">LOGIN</a>
+                               href="login">LOGIN</a>
                         </li>
                         <li class="">
                             <a class="rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="passwordreset.html">FORGOT PASSWORD</a>
+                               href="passwordreset">FORGOT PASSWORD</a>
                         </li>
                     </ul>
                 </div>
 
                 <!-- <p class="hover:text-[#B76E79] cursor-pointer block font-semibold">Contact</p> -->
-                <a href="login.html">
+                <a href="login">
                     <span class="mr-1 hover:text-[#B76E79] cursor-pointer font-semibold block">Login</span>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                             </div>
 
                             <div class="flex gap-5">
-                                <a href="contact.html" class="button2  px-5 py-1 border border-white">
+                                <a href="contact" class="button2  px-5 py-1 border border-white">
                                     Contact
                                 </a>
                                 <a href="~/Education/Education1" class="flex gap-3  items-center">
@@ -320,7 +320,7 @@
                             </div>
 
                             <div class="flex gap-5 ">
-                                <a href="service1.html" class="button2  px-5 py-1 border border-white">
+                                <a href="service1" class="button2  px-5 py-1 border border-white">
                                     Sell Diamonds
                                 </a>
 
@@ -411,7 +411,7 @@
                             </p>
 
                             <div class="flex gap-5">
-                                <a href="service9.html" class="button2  px-5 py-1 text-lg border border-white">
+                                <a href="Services/service9" class="button2  px-5 py-1 text-lg border border-white">
                                     Invest Today
                                 </a>
                             </div>
@@ -465,7 +465,7 @@
                             </div>
 
                             <div class="flex items-start">
-                                <a href="service2.html"
+                                <a href="Services/service2"
                                    class="button2  px-5 py-1 text-lg border border-white w-fit">
                                     Learn More
                                 </a>
@@ -520,7 +520,7 @@
                             Recycled, polished, loose, second-hand, we buy any shape & grades!
                         </p>
 
-                        <a class="py-5" href="service.html">
+                        <a class="py-5" href="service">
                             <button class="button px-5 py-1 uppercase text-base border border-white">
                                 Sell Now
                             </button>
@@ -533,7 +533,7 @@
                             We help you source your diamonds online, the easiest way possible!
                         </p>
 
-                        <a class="py-5" href="service2.html">
+                        <a class="py-5" href="Services/service2">
                             <button class="button uppercase px-5 py-1 text-base border border-white">
                                 SOURCE IT!
                             </button>
@@ -546,7 +546,7 @@
                             Purchase High Quality, Manufactured Diamonds through AM Diam!
                         </p>
 
-                        <a class="py-5" href="service1.html">
+                        <a class="py-5" href="service1">
                             <button class="button uppercase px-5 py-1 text-base border border-white">
                                 BUY NOW!
                             </button>
@@ -559,7 +559,7 @@
                             We Manufacture ideally processed Diamonds of utmost Quality!
                         </p>
 
-                        <a class="py-5" href="service5.html">
+                        <a class="py-5" href="Services/service5">
                             <button class="button uppercase px-5 py-1 text-base border border-white">
                                 TELL ME MORE!
                             </button>
@@ -572,7 +572,7 @@
                             Diamonds are popular for being a very safe investment, why wait?
                         </p>
 
-                        <a class="py-5" href="service9.html">
+                        <a class="py-5" href="Services/service9">
                             <button class="button uppercase px-5 py-1 text-base border border-white">
                                 Invest!
                             </button>
@@ -744,27 +744,27 @@
                 <div class="flex flex-col gap-y-4">
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="service.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND BUYING</p></a>
+                        <a href="service"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND BUYING</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="service2.html">
+                        <a href="Services/service2">
                             <p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND SOURCING</p>
                         </a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="service1.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND SELLING</p></a>
+                        <a href="service1"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND SELLING</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="service5.html">
+                        <a href="Services/service5">
                             <p class="text-[#E9E9E9] hover:text-[#B76E79]">MANUFACTURING</p>
                         </a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="service9.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">INVESTMENT DIAMOND</p></a>
+                        <a href="Services/service9"><p class="text-[#E9E9E9] hover:text-[#B76E79]">INVESTMENT DIAMOND</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
@@ -772,15 +772,15 @@
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="about.html"> <p class="text-[#E9E9E9] hover:text-[#B76E79]">ABOUT US</p></a>
+                        <a href="about"> <p class="text-[#E9E9E9] hover:text-[#B76E79]">ABOUT US</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="career.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CAREER</p></a>
+                        <a href="career"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CAREER</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="contact.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CONTACT</p></a>
+                        <a href="contact"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CONTACT</p></a>
                     </div>
                 </div>
             </div>
